# lucebox-hub

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-bake.hcl  install.sh  lefthook.yml  lucebox.sh  pyproject.toml  start_server.sh
dflash/: CMakeLists.txt  README.md  RESULTS.md  pyproject.toml
dflash/bench/: run_day4_ab.sh  run_day5_abc.sh  run_day5_seeds_abc.sh  run_drafter_slim_spike.py  run_early_exit_bench.py  run_ee_n_multiclient.sh  run_ee_n_sweep.sh  run_ee_n_sweep_multihop.py  run_ee_n_sweep_niah.py  run_longbench_hotpotqa.py  run_niah_ee7_longctx.py  run_skip_park_32k.py  run_skip_park_32k.sh  run_tier1_proof.py  skip_park_exp.sh
dflash/docs/: MTP_LINEAR_BENCH_2026-05-11.md
dflash/docs/experiments/: kv-cache-q4-vs-tq3-2026-05-25.md
dflash/docs/run-requests/: bragi-gemma4-laguna-config-issues.md  luce-dflash-think-92.md  qwen36-hard-limit-reply-budget-bump.md  sindri-rtx3090ti-qwen36-nothink-92.md
dflash/docs/tuning-snapshots/: SUMMARY-2026-05-24.md
dflash/hip_compat/: cuda_bf16.h
dflash/include/: gemma4.h
dflash/patches/: fix-lm-head-mmq-routing.patch
dflash/scripts/: _prefill_hook.py  bench_agent.py  bench_agent_cases.py  bench_agentic_session.py  bench_agentic_tools.py  bench_ds4_eval.py  bench_he.py  bench_http_capability.py  bench_http_frontiers.py  bench_humaneval.py  bench_llm.py  bench_long_ctx.py  bench_longctx.py  bench_server.py  detokenize.py  entrypoint.sh  eval_quality_compare.py  lucebox_bench.py  mtp_baseline_gate.py  probe_thinking_control.py  run.py  server.py  server_tools.py  test_lucebox_bench.py  test_server.py  test_server_integration.py  test_server_placement.py  tokenize_prompt.py
dflash/scripts/placement/: server_resolver.py
dflash/src/: bsa_launcher_hip.cu  dflash_graph.h  errors.cpp  flashprefill.cpp  flashprefill_kernels.hip.cu  gemma4_dflash_graph.cpp  gemma4_mtp_graph.cpp  gemma4_pflash_prefill.cpp  gemma4_target_graph.cpp  gemma4_target_loader.cpp  gguf_target_loader.cpp  internal.h  qwen35_target_graph.cpp  qwen3_dflash_graph.cpp
dflash/src/common/: attn_masks.h  backend_factory.cpp  backend_factory.h  backend_ipc.cpp  daemon_loop.cpp  dflash_target.h  layer_split_utils.h  model_backend.h  mtp_chain_runner.cpp  mtp_chain_runner.h  mtp_interface.h  mtp_orchestrator.cpp  mtp_orchestrator.h  step_graph.h
dflash/src/gemma4/: gemma4_backend.cpp  gemma4_backend.h  gemma4_daemon.cpp  gemma4_daemon.h  gemma4_graph.cpp  gemma4_internal.h  gemma4_loader.cpp  gemma4_runtime_helpers.cpp  gemma4_runtime_helpers.h
dflash/src/ipc/: dflash_draft_ipc_main.cpp
dflash/src/laguna/: laguna_backend.cpp  laguna_daemon.h
dflash/src/placement/: placement_backend.h  placement_config.h
dflash/src/qwen3/: qwen3_backend.h  qwen3_daemon.h  qwen3_drafter.cpp  qwen3_graph.cpp  qwen3_loader.cpp  score_range.h  slim_drafter.h
dflash/src/qwen35/: gguf_target_loader.cpp  graph_builders.cpp  graph_builders.h  qwen35_backend.cpp  qwen35_backend.h  qwen35_daemon.cpp  qwen35_daemon.h  qwen35_dflash_target.cpp  qwen35_dflash_target.h  qwen35_layer_split.h  qwen35_mtp.cpp  qwen35_mtp.h  qwen35_mtp_graph.cpp  qwen35_mtp_graph.h  qwen35_mtp_loader.cpp  qwen35_target_graph.cpp
dflash/src/qwen35moe/: qwen35moe_backend.cpp  qwen35moe_backend.h  qwen35moe_hybrid_ffn_eval.cpp
dflash/src/server/: adaptive_keep_ratio.h  chat_template.cpp  chat_template.h  http_server.cpp  http_server.h  model_card.cpp  model_card.h  prefix_cache.cpp  prefix_cache.h  server_main.cpp  sse_emitter.cpp  sse_emitter.h
dflash/test/: smoke_draft_graph.cpp  smoke_load_moe_target.cpp  smoke_moe_target_forward.cpp  test_adaptive_keep_ratio.cpp  test_bandit_integration.cpp  test_common_mtp_orchestrator.cpp  test_dflash.cpp  test_drafter_early_exit_score_range.cpp  test_drafter_slim_vram.cpp  test_drafter_warm_path_regression.cpp  test_gemma4_dflash.cpp  test_generate.cpp  test_server_unit.cpp  test_vs_oracle.cpp
dflash/test/gemma4/: smoke_gemma4_target_forward.cpp  test_gemma4_dflash.cpp  test_gemma4_dflash_backend.cpp
dflash/tests/: test_parsing.py  test_server.py
harness/: README.md  client_test_runner.py  metrics_parser.py  pyproject.toml  test_compaction.py
harness/clients/: README.md  common.sh  run_backend_pair.sh  run_claude_code.sh  run_codex.sh  run_lucebench.sh  run_pi.sh  session_inject_proxy.py
harness/clients/prompts/: code_gen.txt  explain_algo.txt
harness/harness/clients/: codex.py  hermes.py  openclaw.py  opencode.py
harness/src/harness/: __init__.py  bench.py
harness/tests/: _stub_server.py  test_adapters.py  test_metrics_parser.py  test_preflight.py  test_session_injector.py
luce-bench/: .gitignore  NOTICE  README.md  pyproject.toml
luce-bench/docs/: client-thinking-budget.md  metrics.md
luce-bench/src/lucebench/: __init__.py  _thinking.py  cli.py  hostinfo.py  levels.py  model_cards.py  normalize.py  probe.py  regrade.py  report.py  runner.py  schema.py  snapshot.py  submit_baseline.py
luce-bench/tests/: conftest.py  test_agent_grader.py  test_agent_recorded.py  test_client_thinking_budget.py  test_extract_agentic_fixture.py  test_fixtures.py  test_forge_grader.py  test_gsm8k.py  test_hellaswag.py  test_hostinfo.py  test_humaneval_grader.py  test_levels.py  test_longctx_grader.py  test_model_cards.py  test_normalize_and_regrade.py  test_report.py  test_runner.py  test_smoke_area.py  test_smoke_end_to_end.py  test_snapshot.py  test_submit_baseline.py  test_thinking_control.py  test_truthfulqa_mc1.py
lucebox/: .gitignore  README.md  pyproject.toml
lucebox/lucebox/: __init__.py  __main__.py  cli.py  config.py  docker_run.py  download.py  host_check.py  profile.py  smoke.py  types.py
lucebox/src/lucebox/: __init__.py  autotune.py  cli.py  config.py  docker_run.py  download.py  host_check.py  host_facts.py  (+3 more)
lucebox/tests/: test_autotune.py  test_autotune_candidate_configs.py  test_autotune_cli.py  test_check.py  test_cli.py  test_config.py  test_config_cli.py  test_download.py  test_models_cli.py  test_profile.py  test_smoke.py  test_sweep.py
megakernel/: prefill.cu  pyproject.toml
(+538 files in other folders)
