[project]
name = "lucebox-hub"
version = "0.0.0"
description = "Lucebox: open LLM inference, rewritten by hand for one specific chip at a time. Workspace root."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Lucebox" }]

dependencies = [
    "lucebox",
    "lucebox-dflash",
    "luce-bench",
    "pflash",
]

[project.optional-dependencies]
megakernel = ["qwen35-megakernel-bf16"]
dev = ["pytest>=8", "mypy>=1.10,<2", "ruff>=0.14,<1"]

[tool.ruff]
target-version = "py312"
line-length = 100
# Staged lint adoption for the Python surfaces touched by the Docker,
# benchmark, autotune, and host-CLI stack. Untouched server-adjacent scripts and
# vendored dependencies stay outside this gate until they are cleaned up.
include = [
    "dflash/scripts/prefix_cache.py",
    "dflash/scripts/test_server.py",
    "dflash/scripts/tool_memory.py",
    "lucebox/**/*.py",
]
extend-exclude = [
    "dflash/deps",
    "megakernel",
    "pflash",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv]
package = false
# Megakernel's CUDAExtension links against torch's C++ libs, so the build
# and runtime envs must share the same torch wheel. uv's default isolated
# build env resolves `[build-system] requires` independently of the
# project's `[tool.uv.sources]` mapping, pulling torch from PyPI instead
# of the cu128 index below. That produces an ABI-incompatible .so
# (undefined symbol `_ZNR5torch7Library4_def...` on import). Skip
# isolation here and require a two-pass install:
#   1. `uv sync`                  → populates the main venv with cu128
#                                    torch + setuptools (via dflash deps)
#   2. `uv sync --extra megakernel` → compiles setup.py against that env
no-build-isolation-package = ["qwen35-megakernel-bf16"]

[tool.uv.workspace]
members = ["server", "lucebox", "optimizations/megakernel", "optimizations/pflash"]

[tool.uv.sources]
lucebox = { workspace = true }
lucebox-dflash = { workspace = true }
pflash = { workspace = true }
qwen35-megakernel-bf16 = { workspace = true }
torch = { index = "pytorch-cu128" }
# luce-bench is the standalone PyPI benchmark package (formerly
# `dflash/scripts/bench_*.py`). Pinned to a git tag until we land the
# trusted-publishing flow on PyPI; switch to a plain version pin then.
luce-bench = { git = "https://github.com/easel/luce-bench.git", tag = "v0.2.4" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
