[project]
name = "lucebox"
version = "0.2.0"
description = "Host-side CLI for the lucebox-hub container: orchestration, autotune, benchmark sweep"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Lucebox" }]
license = { text = "Apache-2.0" }

# Kept intentionally narrow. typer pulls click+rich; tomli-w gives us TOML
# writes (stdlib tomllib only reads). httpx for the smoke + readiness probes.
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "tomli-w>=1.0",
]

[project.scripts]
lucebox = "lucebox.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
