[project]
name = "qwen35-megakernel-bf16"
version = "0.1.0"
description = "Fused single-kernel forward pass for Qwen 3.5-0.8B hybrid DeltaNet/Attention on consumer NVIDIA GPUs."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Lucebox" }]

# Runtime deps for bench scripts / model.py. The CUDA extension itself
# (qwen35_megakernel_bf16_C) is compiled by setup.py via
# torch.utils.cpp_extension at install time.
dependencies = [
    "torch>=2.5",
    "transformers>=4.50",
]

[build-system]
# `torch` must be importable at build time because setup.py imports
# torch.utils.cpp_extension to register the CUDAExtension. uv resolves
# this list using the same indices as the project (so torch comes from
# the cu130 PyTorch index declared in the workspace root), then builds
# the wheel in an isolated env before installing.
requires = ["setuptools>=68", "wheel", "torch"]
build-backend = "setuptools.build_meta"
